gwt-cordova/src/main/webapp/LanguageMemory.css
.Android .gwt-Label.headerArrow {
    margin-right: 10px;
}

.Android .gwt-Label.headerArrow {
    border-right: 10px solid #e8c571;
}

.gwt-Label.headerArrow {
    width: 0; 
    height: 0; 
    position: relative;
    top: 4px;
    left:5px;
    border-top: 15px solid transparent;
    border-bottom: 17px solid transparent; 
    border-right:17px solid white;
    margin-right: 0px;
    cursor: pointer;
    /*z-index: 1;*/
}

.Android .gwt-Label.headerButton {
    display: none;
}
.gwt-Label.headerButton {
    position: relative;
    /*top: 5px;*/
    padding: 5px;
    margin-left: 0px;
    display: block;
    display: inline-block;
    color: black;
    text-decoration: none;
    /*border-color: #eddbc2;*/
    border-radius: 15px;
    /*    border-top-left-radius: 5px;
        border-bottom-left-radius: 5px;*/
    height: 30px;
}

.gwt-Label.headerIcon {
    display: none;
}
.Android .gwt-Label.headerIcon {
    display: block;
    background: url("./images/icon.png");
    background-size: 50px 50px;
    background-repeat: no-repeat;
    height: 50px;
    width:50px;
    border: none;
    /*cursor: pointer;*/
}

.headerLabel {
    padding: 8px 10px;
    font-size: 30px;
}

.svgPanel {
    /* this is required because of the contentPanel style */
    /*position: absolute;*/
    /*left: 0px;*/
    /*    top: -50px;*/
}

.svgDiagram {
    position:fixed; 
    top:0; 
    bottom:0; 
    left:0; 
    right:0
}
.choosePlayerList {
    /*color: green;*/
    width: 100%;
}

.svgPopupPanel .gwt-Button, 
.stimulusHelpPanel .gwt-Button,
.choosePlayerList,
.gwt-Button.stimulusButton, .gwt-Button.stimulusQuitButton {
    display: block;
    display: inline-block;
    /*padding:  5px;*/
    /*margin: 0 10px 10px 0;*/
    color: black;
    text-decoration: none;
    border: none;
    border-radius: 15px;
    outline: none;
}
.gwt-CheckBox.optionCheckBox input {    
    height: 40px;
    width: 40px;
}

.gwt-Button.optionButton {
    padding: 0px 10px 0px 10px;
    margin: 10px 10px 10px 0;
    border-radius: 15px;
    /*background: rgb(193,227,241);*/
    outline: none;
    display: block;
    display: inline-block;
    color: black;
    text-decoration: none;
    cursor: pointer;
    border-color: #eddbc2;
    outline: none;
    height: 40px;
    width: 100%;
}

.svgPopupPanel .gwt-Button,
.choosePlayerList,
.stimulusHelpPanel .gwt-Button, .stimulusHelpText,
#widgetTag, .stimulusScreen, .menuTable, .gwt-Label.stimulusProgressLabel, .gwt-Button.nextButton, .gwt-Button.menuButton,.gwt-PushButton.stimulusButton,.gwt-Button.stimulusButton,.gwt-Button.stimulusHelpButton, .gwt-Button.stimulusQuitButton, .gwt-Button.stimulusButton, .gwt-Button.optionButton, .gwt-Label.headerButton {
    /* prevent text selection on the buttons */
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    /* end prevent text selection on the buttons */
}

.gwt-Button.stimulusHelpButton:active, .gwt-Button.stimulusQuitButton:active, .gwt-Button.stimulusButton:active, .gwt-Button.stimulusHelpButton:hover, .gwt-Button.stimulusQuitButton:hover {
    background:lightgrey;
    border: none;
}

/*.gwt-Button.nextButton:disabled,*/ 
/*, .gwt-Button.optionButton:disabled, .gwt-Label.headerButton:disabled {*/
/*.gwt-PushButton.stimulusButton:hover:disabled,
.gwt-Button.stimulusButton:hover:disabled,
.gwt-Button.menuButton:hover:disabled {
    border: none;
}*/

/*.gwt-Button.nextButton:hover, .gwt-Button.menuButton:hover, .gwt-Button.optionButton:hover, .gwt-Label.headerButton:hover, */
.gwt-Button.nextButton:active, .gwt-Button.menuButton:active,.gwt-PushButton.stimulusButton:active,.gwt-Button.stimulusButton:active, .gwt-Button.optionButton:active, .gwt-Label.headerButton:active {
    /*background:#eddbc2;*/
    /*background:rgb(246,170,139);*/
    background:lightgrey;
    border: none;
}

.choosePlayerList,
.gwt-Button.nextButton, .gwt-Button.menuButton,.gwt-PushButton.stimulusButton,.gwt-Button.stimulusHelpButton, .gwt-Button.stimulusQuitButton, .gwt-Button.stimulusButton, .gwt-Button.optionButton, .gwt-Label.headerButton {
    cursor: pointer;
    border-width: 0px;
    border-style: none;
    border: none;
    outline: none;
    background: white;
}
.gwt-Button.nextButton {
    display: block;
    display: inline-block;
    color: black;
    text-decoration: none;
    border-color: #eddbc2;
    border-radius: 15px;
    outline: none;
    width: 80%;
    height: 40px;
}

.gwt-Button.menuButton,.gwt-PushButton.stimulusButton,.gwt-Button.stimulusButton {
    /*background:rgb(246,170,139);*/
    display: block;
    display: inline-block;
    /*background: rgb(193,227,241);*/
    padding: 5px 10px;
    margin: 0 10px 10px 0;
    color: black;
    border-color: #eddbc2;
    /*border-color: #e8c571;*/
    text-decoration: none;
    /*border-color: transparent;*/
    border-radius: 15px;
    outline: none;
    width: 100%;
}

.gwt-Button.stimulusHelpButton, .gwt-Button.stimulusQuitButton {
    border-radius: 25px;
    padding: 5px 10px;
    height: 42px;
    width: 42px;
}
.gwt-Button.stimulusQuitButton {
    float: right;
}
.gwt-Button.stimulusHelpButton {
    float: left;
}

.headerPanel {
    border-bottom-color: white;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    width: 100%;
}

.contentBody, .menuOuter {
    width: 80%;
    margin-top: 50px;    
    margin-bottom: -50px;    
    margin-left: 10%;   
    margin-right: 10%;   
}

.menuOuter {
    width: 80%;
}
.bargraphInner {
    background-color:rgb(246,170,139);
}

.bargraphOuter {
    border: rgb(111,111,111);
    border-width: 1px;
    border-style: solid;
}

canvas {
    outline: none;
    border: grey;
    border-width: 1px;
    border-style: solid;
}

.popupTextBox,
.stimulusHelpText {
    font-size: 17pt;
    color: black;
    padding: 10px 10px 10px 10px;
}
/* ... */

